# rules_embree

./: 0001-fix-includes.patch  BUILD.embree  README.md  WORKSPACE.bazel
.github/workflows/: bazel_build.yml
embree/: embree.bzl
test/: .bazelrc  BUILD.bazel  WORKSPACE.bazel  embree_test.cpp
