"""
    SPDX-FileCopyrightText: 2022 Julian Amann <dev@vertexwahn.de>
    SPDX-License-Identifier: Apache-2.0
"""

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("@bazel_tools//tools/build_defs/repo:utils.bzl", "maybe")

#-------------------------------------------------------------------------------------
# Embree
#-------------------------------------------------------------------------------------

local_repository(
    name = "de_vertexwahn_rules_embree",
    path = "..",
)

load("@de_vertexwahn_rules_embree//:embree/embree.bzl", "embree_deps")

# embree_deps() will re-download the tarball every time BUILD.embree
# changes, which is frustrating for doing development. Download it
# yourself, uncomment the below and change the path as appropriate
# for a faster iteration cycle on changes.
#
# new_local_repository(
#     name = "embree",
#     build_file = "@de_vertexwahn_rules_embree//:BUILD.embree",
#     path = "/home/vertexwahn/code/boost_1_71_0/",
# )

embree_deps()

#-------------------------------------------------------------------------------------
# GoogleTest
#-------------------------------------------------------------------------------------

maybe(
    http_archive,
    name = "com_google_googletest",
    sha256 = "fa94eeeadde0b3c77e8b52b548342776ac7f0b23b0819330679c4eefdabd5260",
    strip_prefix = "googletest-6f6ab4212aa02cfe02e480711246da4fc17b0761",
    urls = ["https://github.com/google/googletest/archive/6f6ab4212aa02cfe02e480711246da4fc17b0761.zip"],
)

#-------------------------------------------------------------------------------------
# rules_boost
#-------------------------------------------------------------------------------------

maybe(
    http_archive,
    name = "com_github_nelhage_rules_boost",
    sha256 = "708173439f5b18a124126b603a1962e4313d9e036e4d70cf66509b4f0907e7ee",
    strip_prefix = "rules_boost-239bfe704d6a334d30390272148774d1442ae534",
    urls = ["https://github.com/nelhage/rules_boost/archive/239bfe704d6a334d30390272148774d1442ae534.zip"],
)

load("@com_github_nelhage_rules_boost//:boost/boost.bzl", "boost_deps")

boost_deps()
